After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 602870 - Fix compilation with older libGL
Fix compilation with older libGL
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2009-11-24 20:58 UTC by Owen Taylor
Modified: 2009-11-24 21:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix compilation with older libGL (2.60 KB, patch)
2009-11-24 20:58 UTC, Owen Taylor
committed Details | Review

Description Owen Taylor 2009-11-24 20:58:41 UTC
the mutlitexture and texture_rectangle extensions have recently
been incorporated into the GL core; fixes needed to work with
libGL that proceeds that:

GL_TEXTURE_RECTANGLE_ARB - use _ARB name
glActiveTextureARB() - use get_proc_address
Comment 1 Owen Taylor 2009-11-24 20:58:43 UTC
Created attachment 148411 [details] [review]
Fix compilation with older libGL
Comment 2 Owen Taylor 2009-11-24 21:04:45 UTC
Attachment 148411 [details] pushed as bdb3be7 - Fix compilation with older libGL